added notes for model selectio

--- a/Mini-project 2 - R&D Innovation.ipynb
+++ b/Mini-project 2 - R&D Innovation.ipynb
@@ -1435,9 +1435,11 @@
     "collapsed": false
    },
    "source": [
-    "As all variables correlate similar with the variable 'project_outcomes', all variables are taken into account when computing the model. As we work with classification models, we will evaluate the models performance by computing the Accuracy, Recall, Precision and F1 score.\n",
+    "As all variables correlate similar with the variable 'project_outcomes', all variables are taken into account when computing the model. This, however, can potentially have implications regarding overfitting as this can produce highly complex models.\n",
     "\n",
-    "Note: why are these models selected and deemed most suitable?"
+    "First a logistic regression model is computed as 'benchmark' model and afterwards a Random Forest model is created. In doing so, it will be able to evaluate and compare one highly interpretable and presumably low accurate model -the logistic regression model- and one low interpretable and presumably highly accurate model -an Ensemble model: Random Forest model-. The choice had fallen on a Random forest model as Ensemble model as it can be used for regression nad classification taksts (the case here is classification) and as it is suitable for handling high dimensional datasets with a large number of features.\n",
+    "\n",
+    "As we work with classification models, we will evaluate the models performance by computing the Accuracy, Recall, Precision and F1 score.\n"
    ]
   },
   {
