"random forest" mentioned in q4

--- a/Mini-project 2 - R&D Innovation.ipynb
+++ b/Mini-project 2 - R&D Innovation.ipynb
@@ -1802,7 +1802,7 @@
    },
    "source": [
     "## 4. Model evaluation and output visualization\n",
-    "In this step, the prediction ability of the selected model is evaluated. Here, we look at:<br>\n",
+    "In this step, the prediction ability of the selected model, Random Forest, is evaluated in detail. Here, we look at:<br>\n",
     "    i. Confusion Matrix <br>\n",
     "    ii. Performance metrics <br>\n",
     "    iii. Predicted vs actual outcome comparison graphs <br>\n"
