--- a/Mini-project 2 - R&D Innovation.ipynb
+++ b/Mini-project 2 - R&D Innovation.ipynb
@@ -1968,7 +1968,7 @@
    "id": "7e0ab459",
    "metadata": {},
    "source": [
-    "**ii. Performancee Metrics**\n",
+    "**ii. Performance Metrics**\n",
     "\n",
     "To assess the model performance in more depth, we thus must look at the predictions at the level of the classes.\n",
     "That's why, at first, we check the classification report metrics:\n",
@@ -2455,7 +2455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
