Addition of financial features + explanation as to why waterfall plots are not used

--- a/Mini-project 2 - R&D Innovation.ipynb
+++ b/Mini-project 2 - R&D Innovation.ipynb
@@ -8,28 +8,7 @@
     "# TPM034A Machine Learning for socio-technical systems \n",
     "## `Mini-project #2: Predicting Innovative Outcomes of Applied Research Projects in the NL`\n",
     "\n",
-    "**Delft University of Technology**<br>\n",
-    "**Q2 2023**<br>\n",
-    "**Module manager:** Dr. Sander van Cranenburgh <br>\n",
-    "**Instructors:** Dr. Sander van Cranenburgh, Dr. Giacomo Marangoni, Dr. Amir Pooyan Afghari <br>\n",
-    "**TAs:**  Francisco Garrido Valenzuela & Lucas Spierenburg <br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5f634f93",
-   "metadata": {},
-   "source": [
-    "## `Learning objectives:`\n",
-    "This mini-project addresses LO3, LO4, LO5 and LO6 in the course.\n",
-    "\n",
-    "After the course, students can:\n",
-    "1. explain fundamental concepts of machine learning (ML).\n",
-    "2. conceptually explain the workings of a selected number of ML models and eXplainable AI (XAI) techniques, and apply these to empirical data.\n",
-    "3. **identify applications of ML and XAI techniques in real-world socio-technical systems**\n",
-    "4. **examine the impact of ML-based solutions and interventions on individuals, organisations, and society through XAI.**\n",
-    "5. **conduct an in-depth analysis of a real-world socio-technical challenge, by applying ML and XAI to empirical data.**\n",
-    "6. **reflect on the strengths and limitations of ML and XAI in real-world socio-technical systems.**"
+    "Group 5:  Stefani Slavova, Esteban Ralon, Javier Mondragon, Anne de Koeijer, Suze van Santen, Canan Tezgec\n"
    ]
   },
   {
@@ -79,15 +58,6 @@
     "This project is a group project and so each group must submit one Jupyter Notebook file. However, it is expected that all members of the group contribute to the project and so they all must participate in the final presentation.\n",
     "\n",
     "The deadline for submission is **11/01/2024**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2cf5e838",
-   "metadata": {},
-   "source": [
-    "# Group 5\n",
-    "Stefani Slavova, Esteban Ralon, Javier Mondragon, Anne de Koeijer, Suze van Santen, Canan Tezgec\n"
    ]
   },
   {
@@ -2231,9 +2201,9 @@
     "2. Geographical Diversity - The variety of project team members in terms of their geographical location\n",
     "3. Project Joint Member - Whether one or more project members are also active in one or more other projects\n",
     "4. Technological Diversity - The variety in the range of technical knowledge, expertise and experience between project members\n",
-    "5. Network Reach - How easy it is to reach another project\n",
+    "5. Network Reach - How easy it is to reach another project within the network\n",
     "\n",
-    "All features visualised in the bar plot have a positive contribution to the overall outcome. This is however the mean of the SHAP value. A beeswarm plot is used to gain insight in the overall variation of the SHAP values."
+    "All features visualised in the bar plot have a positive contribution to the overall outcome. This is however the mean of the SHAP value. A beeswarm plot is used to gain insight in the overall variation of the SHAP values in different projects."
    ]
   },
   {
@@ -2275,9 +2245,9 @@
    "id": "593190d6",
    "metadata": {},
    "source": [
-    "The beeswarm plot of the SHAP values indicate the impact that each attribute has on the prediction of the model output, the innovative outcome of the project. Each dot represents a sample. What can be seen is that the contribution of the features is horizontally widespread. This indicates that the impact/contribution of the features vary significantly over various instances. For example, the funds feature has a positive contribution to the innovative outcome of a project in some cases, whilst it has a negative contribution in others. The influence is thus not constant and highly variable.\n",
+    "The beeswarm plot of the SHAP values indicate the impact that each attribute has on the prediction of the model output, the innovative outcome of the project. Each dot represents a different project. What can be seen is that the contribution of the features is horizontally widespread. This indicates that the impact/contribution of the features vary significantly over various instances. For example, the funds feature has a positive contribution to the innovative outcome of a project in some cases, whilst it has a negative contribution in others. Projects with higher funding present higher and positive SHAP values, indicating a positive inpact on the output of the model. What can also be seen is that higher values in geographical and technological diversities lead to negative SHAP values, indicating that a more diverse composition of the committee does not contribute to successful project outcomes.\n",
     "\n",
-    "The previously presented mean SHAP values indicated a relatively small positive contribution of the features. The beeswarm plot has highlighted the variance in SHAP values, with large differences in SHAP values occurring for different samples."
+    "The previously presented mean SHAP values indicated a relatively small positive contribution of the features. The beeswarm plot has highlighted the variance in SHAP values, with large differences in SHAP values occurring for different samples. For this reason, it has been chosen not to evaluate individual waterfall plots of the contribution of features. Finally, partial dependency plots are evaluated in order to further examine the relationship between (predicted) project success and the five most important features."
    ]
   },
   {
@@ -2375,9 +2345,9 @@
     "Finally, we use partial dependency plots to look at the influence of the five most important features. The features have been scaled, resulting in scaled X-axes of the partial dependency plots. The gray bars indicate the distribution of available values in the data. For all features, it is notable that the distribution is not fully balanced and sometimes contains gaps. This indicates some limitations in the available data. The plots can be used to illustrate the relationship between the feature and the predicted outcomes while marginalizing all other features, making it possible to understand the individual effects of a feature. These relationships are shortly described:\n",
     "\n",
     "1. Funds\n",
-    "The partial dependence plot for Funds indicate an almost linear relationship, with increased funding having increased positive contribution to the innovative outcome of a project. More money increases the likelihood of a project succeeding, but it is no guarantee for a positive outcome.\n",
+    "The partial dependence plot for Funds indicate an almost linear relationship, with increased funding having increased positive contribution to the innovative outcome of a project. More money increases the likelihood of a project succeeding, but it is no guarantee for a positive outcome and the relationship between the two variables becomes constant when a specific funding level is reached.\n",
     "2. Geographical Diversity\n",
-    "The partial dependence of the model to Geographical diversity indicates that an increase in geographical diversity decreases the positive contribution. A project with more diversity has a decreased likelihood of beeing successful. A real life possibility could be that geographically diverse teams face difficulties to meet, thus complicating the teamwork and maybe outcome of the project.\n",
+    "The partial dependence of the model to Geographical diversity indicates that an increase in geographical diversity decreases the positive contribution. A real life explanation could be that geographically diverse teams face difficulties to meet, thus complicating the teamwork and maybe outcome of the project.\n",
     "3. Project Joint Member\n",
     "Increased joint membership follows a similar relationship to Geographical diversity, with an increase in the number of projects members are involved in leading to a less positive contribution to the model outcome.\n",
     "4. Technological Diversity\n",
@@ -2435,7 +2405,8 @@
    "id": "e88df6a8",
    "metadata": {},
    "source": [
-    "The most severe limitation is the poor model performance that limits the quality of the XAI analysis and any potential implementation. One reason for the poor performance is the lack of features that may serve as strong predictors. Furthermore, as previously mentioned, the networked metrics included are very basic and static. The dynamic nature of research collaboration is not properly captured. Therefore, the best chance for the model to improve its performance would be to re-evaluate the sort of variables included. Various types of new features could replace the current ones, such as: avg. number of committee meetings, market value of companies involved, number of active researchers working on the project, etc. Whether these variables would improve the model performance would need to be test, but the idea is that the current variables are not sufficient and these need to either be replaced or complemented. "
+    "The most severe limitation is the poor model performance that limits the quality of the XAI analysis and any potential implementation. One reason for the poor performance is the lack of features that may serve as strong predictors. Furthermore, as previously mentioned, the networked metrics included are very basic and static. The dynamic nature of research collaboration is not properly captured. Therefore, the best chance for the model to improve its performance would be to re-evaluate the sort of variables included. Various types of new features could replace the current ones, such as: avg. number of committee meetings, market value of companies involved, number of active researchers working on the project, etc.. A specific type of features that could be introduced are economical. Information on the state of the economy in different years could influence the success of a project. For example, it can be expected that projects are less likely to succeed during societal financial hardships. A feature that could be used to evaluate the financial climate could be the GDP growth. Whether these variables would improve the model performance would need to be test, but the idea is that the current variables are not sufficient and these need to either be replaced or complemented.\n",
+    "\n"
    ]
   }
  ],
